--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -33,4 +33,6 @@ models:
   dbt_ecommmerce_project:
     # Config indicated by + and applies to all files under models/example/
     example:
-      +materialized: view
+      +materialized: table
+    project__e_commerce_data:
+      +materialized: table
